Various fixes for different issues (#31)
- #28: Add date and time for match to card header
 - #27: Move close button for scorecard on mobile
 - #20: Home Vs Away title not centered

--- a/src/app/components/score-card/mini-score-card/mini-score-card.component.scss
+++ b/src/app/components/score-card/mini-score-card/mini-score-card.component.scss
@@ -2,8 +2,10 @@
 @import "../../../../assets/css/mixins.scss";
 @import "../../../../assets/css/global.scss";
 
-.score-card-header-image {
-
+.mat-card-header {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
 }
 
 .score-card-header-image img{
